# aho-corasick

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  meson.build
benchmark/: CMakeLists.txt  benchmark.cpp
include/ac/: ahocorasick.h  search.h
include/ac/nfa/: nfa.h
include/ac/utils/: charset.h  prefilter.h
src/: CMakeLists.txt  ahocorasick.cpp  meson.build
src/nfa/: CMakeLists.txt  meson.build  nfa.cpp
src/utils/: CMakeLists.txt  charset.cpp  meson.build  prefilter.cpp
